updates to about home and contact

--- a/about.html
+++ b/about.html
@@ -131,15 +131,21 @@
             <div class="row fh5co-section">
                 <div class="container">
                     <div class="row no-margin">
-                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading animate-box">
+                        <div class="col-md-6 col-md-offset-3 col-sm-8 col-sm-offset-2 text-center fh5co-heading fh5co-heading-sm animate-box">
                             <span>About Me</span>
                             <h2>hey, I'm Forrest</h2>
                             <!-- <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p> -->
                             <p>
-                                I'm passionate about photography (I know right? Who would have guessed!) and have been honing my skills for the past 5 years, and love the creative freedom and
-                                documentary aspect.
+                                I love nature, road trips, and standing on the ocean coast with salt in the air and the caress of a breeze on your face. And most of all, I love creating with my camera
+                                in hand.
                             </p>
-                            <p>But, enough about me, let's hear from you!</p>
+                            <p>
+                                I’m also a storyteller, and I want to tell your story as unique-to-you as possible. If you’re not as comfortable posing in front of the camera — that’s fine! Let’s find
+                                an activity you love, and capture candid pictures instead. Everyone has something that makes them smile, makes them laugh. For me, photography is about capturing people
+                                in their element. Capturing what makes you—you.
+                            </p>
+                            <p>Your story is unique, and I can’t wait to tell it.</p>
+                            <!-- <p>But, enough about me, let's hear from you!</p> -->
                             <div class="btn-container btn-border-black display-flex-row justify-center">
                                 <a class="btn" href="/contact">Let's chat!</a>
                             </div>
