--- a/contact.html
+++ b/contact.html
@@ -129,9 +129,14 @@
                         <div class="col-md-5 animate-box">
                             <div class="fh5co-contact-info">
                                 <h2>Hello!</h2>
-                                <p>If you made it this far, it's likely you're considering me for your wedding. That's awesome, I look forward to meeting you and documenting your story.</p>
-
-                                <h4>Contact Information</h4>
+                                <p>
+                                    If you made it this far, it's likely you're considering me as your photographer. That's awesome (and makes me so HAPPY!).
+                                    <br />
+                                    I look forward to meeting you and documenting your story.
+                                </p>
+                                <p>And maybe we can become friends in the process—who knows!</p>
+                                <br />
+                                <h3>Contact Information</h3>
                                 <ul>
                                     <li class="address"><p>North Bay, Ontario</p></li>
                                     <li class="phone">
