--- a/footer.html
+++ b/footer.html
@@ -42,14 +42,14 @@
                     </div> -->
     <div class="container">
         <div class="footer-logo img-container display-flex-row justify-center">
-            <a href="index.html">
+            <a href="index">
                 <img id="footer-logo" src="img/forrest-herman-black.png" alt="logo" />
             </a>
         </div>
         <div class="row copyright">
             <div class="col-md-12 text-center">
                 <p>
-                    Copyright &copy;
+                    Copyright &copy; 2021
                     <script>
                         document.write(new Date().getFullYear())
                     </script>
