--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                         </div>
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
-                                <li class="hidden-on-mobile"><a href="home">Home</a></li>
+                                <li class="hidden-on-mobile"><a href="index">Home</a></li>
                                 <li><a href="about.html">Hello</a></li>
                                 <li>
                                     <a href="photos.html">Photos</a>
@@ -146,22 +146,31 @@
             </header>
 
             <div id="fh5co-couple" class="fh5co-section-gray">
-                <div class="container">
-                    <div class="row flex-row">
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-4 order-sm-2 text-center animate-box img-container">
+                <div class="container container-max-width-970">
+                    <div class="row flex-row" style="column-gap: 15px">
+                        <!-- <div class="col-sm-1"></div> -->
+                        <div class="col-sm-6 order-sm-2 text-center animate-box img-container">
                             <img class="about-img" src="img/DundurnCastle_010.jpg" alt="" />
                         </div>
-                        <div class="col-sm-1"></div>
-                        <div class="col-sm-5 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center fh5co-heading black">
+                        <!-- <div class="col-sm-1"></div> -->
+                        <div class="col-sm-6 order-sm-1 text-left animate-box flex-col justify-center mobile-text-center fh5co-heading fh5co-heading-none black">
                             <h2 style="font-family: DM Serif Display, serif; letter-spacing: 1px">Hey there, I'm Forrest!</h2>
-                            <p>Welcome to my home, I'm so excited to meet you.</p>
-                            <p>I'm Forrest, a photographer and filmmaker dedicated to capturing visuals as timeless as your memories.</p>
+                            <p>My priority is to capture images that are authentic, candid, and full of life. Your portraits should be an extension of you—a snapshot of your personality.</p>
+                            <p>
+                                What comes to mind when you hear 'photoshoot'? Perhaps you imagine smiling faces, perhaps you picture a camera or a photographer. But you might also hear 'photoshoot'
+                                and immediately think 'awkward', or 'poses'. Or maybe even 'cheese'. Ughh. Cringe. Perhaps prior photo experiences have made you feel silly, or put on display...
+                            </p>
+                            <p>But I promise—you deserve so much more than that.</p>
+                            <p>
+                                For me, a photoshoot is not something awkward. Not forced. It is a relationship—documented. Your relationship. I take a documentary approach to my photographs. The
+                                camera is not the object of focus. Your partner is. You be <i>you</i>, and I’ll capture it in a memorable gallery. We’ll have you smiling, just wait and see.
+                            </p>
+                            <!-- <p>I'm Forrest, a photographer and filmmaker dedicated to capturing visuals as timeless as your memories.</p> -->
                             <div class="btn-container btn-border-black display-flex-row mobile-justify-center">
-                                <a class="btn" href="/about.html">More about me</a>
+                                <a class="btn" href="about">More about me</a>
                             </div>
                         </div>
-                        <div class="col-sm-1"></div>
+                        <!-- <div class="col-sm-1"></div> -->
                     </div>
                     <!-- <div class="couple-wrap animate-box">
                         <div class="couple-half">
@@ -406,8 +415,8 @@
                                 </div>
                                 <div class="col-md-10 feature-copy">
                                     <h3>Weddings + Elopements</h3>
-                                    <p style="margin-bottom: 10px">My wedding packages begin at $1000. This includes a full day's worth of photo-journalism coverage.</p>
-                                    <p><a href="offerings.html#wedding-elopement">Explore packages</a></p>
+                                    <p style="margin-bottom: 10px">My wedding packages begin at $800. This includes a full day's worth of photo-journalism coverage.</p>
+                                    <p><a href="offerings#wedding-elopement">Explore packages</a></p>
                                 </div>
                             </div>
 
@@ -420,7 +429,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Engagements + Couples</h3>
                                     <p>Engagement, proposal and couples sessions begin at $200. Engagement sessions are complimentary with most wedding packages.</p>
-                                    <p><a href="offerings.html#couples">Explore packages</a></p>
+                                    <p><a href="offerings#couples">Explore packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-3" data-animate-effect="fadeInLeft">
@@ -435,7 +444,7 @@
                                         I strive to capture your day in a unique and authentic manner. Each film features a hand-picked music track, selected to perfectly match your wedding style. I
                                         offer select wedding film packages, allowing you relive these special moments again and again and to share your day with those who couldn't make it.
                                     </p>
-                                    <p><a href="offerings.html">Explore packages</a></p>
+                                    <p><a href="offerings">Explore packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-4" data-animate-effect="fadeInLeft">
@@ -448,9 +457,9 @@
                                     <h3>Proffessional Headshots</h3>
                                     <p>
                                         Ideal for those who are serious about their professionalism and corporate appearance. A studio headshot guarantees that you will stand out among the rest.
-                                        Includes one wardrobe change.
+                                        <!-- Includes one wardrobe change. -->
                                     </p>
-                                    <p><a href="contact.html">Let's talk</a></p>
+                                    <p><a href="contact">Let's talk</a></p>
                                 </div>
                             </div>
 
@@ -463,7 +472,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Individual Portraits</h3>
                                     <p></p>
-                                    <p><a href="offerings.html#weddings">See packages</a></p>
+                                    <p><a href="offerings#weddings">See packages</a></p>
                                 </div>
                             </div> -->
                             <div class="feature-left animate-box order-5" data-animate-effect="fadeInLeft">
@@ -478,7 +487,7 @@
                                         Your family is beautiful, why not document it? We can meet at a park, go for a hike, or explore your home—I'm here to create art and capture photos you will
                                         cherish forever.
                                     </p>
-                                    <p><a href="offerings.html#family-sessions">Explore packages</a></p>
+                                    <p><a href="offerings#family-sessions">Explore packages</a></p>
                                 </div>
                             </div>
                             <div class="feature-left animate-box order-6" data-animate-effect="fadeInLeft">
@@ -490,7 +499,7 @@
                                 <div class="col-md-10 feature-copy">
                                     <h3>Branding + Small Business</h3>
                                     <p>Branding and small business projects are custom quoted to meet your needs. Get in touch!</p>
-                                    <p><a href="contact.html">Let's build a package for you</a></p>
+                                    <p><a href="contact">Let's build a package for you</a></p>
                                 </div>
                             </div>
                         </div>
