--- a/offerings.html
+++ b/offerings.html
@@ -137,7 +137,7 @@
                     <div class="row fh5co-section less-vertical-padding">
                         <div class="text-center fh5co-heading fh5co-heading-sm animate-box">
                             <span>The Goods — Photography</span>
-                            <h2>Investment</h2>
+                            <h2 class="font-script">Investment</h2>
                             <br />
                             <p>I'm so excited you're here. Let's capture happy memories together</p>
                             <p>After shooting, you receive all digital edits on an online gallery for viewing, sharing, download (don't worry, you get to keep ALL the photos!), and printing.</p>
@@ -152,7 +152,7 @@
                         </div>
                         <div class="col-md-7 order-md-1 text-center fh5co-heading fh5co-heading-sm animate-box">
                             <h2 style="text-transform: uppercase">Weddings + Elopements</h2>
-                            <p>Wedding and Elopement packages begin at $500</p>
+                            <p>Packages begin at $600</p>
                             <!-- <p>Elopement packages begin at $500 and Wedding Packages begin at $1000</p> -->
                             <p style="color: black; font-style: normal">
                                 I offer a variety of wedding packages varying from adventurous elopements, to larger events. Whether you're throwing a small intimate backyard weddings or taking over
