updated contact form and home page links

--- a/contact.html
+++ b/contact.html
@@ -127,7 +127,7 @@
                 <div class="container">
                     <div class="row">
                         <div class="col-md-5 animate-box">
-                            <div class="fh5co-contact-info">
+                            <div class="fh5co-contact-info" style="margin-bottom: 5.5rem">
                                 <h2>Hello!</h2>
                                 <p>
                                     If you made it this far, it's likely you're considering me as your photographer. That's awesome (and makes me so HAPPY!).
@@ -148,28 +148,34 @@
                                         </p>
                                     </li>
                                 </ul>
+                                <div class="img-container d-sm-none" style="padding: 4rem; padding-left: 0">
+                                    <img src="/img/Portfolio_056.jpg" alt="" />
+                                </div>
                             </div>
                         </div>
                         <div class="col-md-7 animate-box">
                             <!-- Contact Form!!!!!!!!! -->
                             <form action="https://formspree.io/f/xyylwddn" method="POST">
                                 <div class="row form-group">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 col-12 d-md-none">
+                                        <h3>Contact Form</h3>
+                                    </div>
+                                    <div class="col-md-6 inner-form-group">
                                         <label for="fname">First Name *</label>
                                         <input type="text" id="fname" class="form-control" placeholder="Your First Name" required="" />
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 inner-form-group">
                                         <label for="lname">Last Name *</label>
                                         <input type="text" id="lname" class="form-control" placeholder="Your Last Name" required="" />
                                     </div>
                                 </div>
 
                                 <div class="row form-group">
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 inner-form-group">
                                         <label for="fname">Your Partner's First Name</label>
                                         <input type="text" id="fname2" class="form-control" placeholder="Your Partner's First Name" />
                                     </div>
-                                    <div class="col-md-6">
+                                    <div class="col-md-6 inner-form-group">
                                         <label for="lname">Your Partner's Last Name</label>
                                         <input type="text" id="lname2" class="form-control" placeholder="Your Partner's Last Name" />
                                     </div>
