--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
                         <div class="col-xs-10 text-right menu-1">
                             <ul id="nav-menu" class="nav-menu">
                                 <li class="hidden-on-mobile"><a href="index">Home</a></li>
-                                <li><a href="about.html">Hello</a></li>
+                                <li><a href="about">Hello</a></li>
                                 <li>
-                                    <a href="photos.html">Photos</a>
+                                    <a href="photos">Photos</a>
                                 </li>
                                 <li>
-                                    <a href="films.html">Films</a>
+                                    <a href="films">Films</a>
                                 </li>
                                 <li class="has-dropdown">
-                                    <a href="offerings.html">Offerings</a>
+                                    <a href="offerings">Offerings</a>
                                     <ul class="dropdown">
                                         <li><a href="offerings">Photos</a></li>
                                         <li><a href="#">Films</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="contact.html">Contact</a></li>
+                                <li><a href="contact">Contact</a></li>
                             </ul>
                         </div>
                     </div>
