--- a/contact.html
+++ b/contact.html
@@ -198,7 +198,7 @@
                                 <div class="row form-group">
                                     <div class="col-md-12">
                                         <label for="subject">Instagram — Let's follow each other!</label>
-                                        <input type="text" id="subject" name="subject" class="form-control" placeholder="@your-instagram-handle" />
+                                        <input type="text" id="instagram" name="instagram" class="form-control" placeholder="@your-instagram-handle" />
                                     </div>
                                 </div>
 
