--- a/films.html
+++ b/films.html
@@ -73,6 +73,18 @@
         <!--[if lt IE 9]>
             <script src="js/respond.min.js"></script>
         <![endif]-->
+
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M423Z0G5J7"></script>
+        <script>
+            window.dataLayer = window.dataLayer || []
+            function gtag() {
+                dataLayer.push(arguments)
+            }
+            gtag("js", new Date())
+
+            gtag("config", "G-M423Z0G5J7")
+        </script>
     </head>
     <body>
         <div class="fh5co-loader"></div>
