--- a/contact.html
+++ b/contact.html
@@ -173,23 +173,12 @@
                                         <h3>Contact Form</h3>
                                     </div>
                                     <div class="col-md-6 inner-form-group">
-                                        <label for="fname">First Name *</label>
-                                        <input type="text" id="fname" name="fname" class="form-control" placeholder="Your First Name" required="" />
+                                        <label for="name1">Your Name *</label>
+                                        <input type="text" id="name1" name="name1" class="form-control" placeholder="Your Name" required="" />
                                     </div>
                                     <div class="col-md-6 inner-form-group">
-                                        <label for="lname">Last Name *</label>
-                                        <input type="text" id="lname" name="lname" class="form-control" placeholder="Your Last Name" required="" />
-                                    </div>
-                                </div>
-
-                                <div class="row form-group">
-                                    <div class="col-md-6 inner-form-group">
-                                        <label for="fname">Your Partner's First Name</label>
-                                        <input type="text" id="fname2" name="fname2" class="form-control" placeholder="Your Partner's First Name" />
-                                    </div>
-                                    <div class="col-md-6 inner-form-group">
-                                        <label for="lname">Your Partner's Last Name</label>
-                                        <input type="text" id="lname2" name="lname2" class="form-control" placeholder="Your Partner's Last Name" />
+                                        <label for="name2">Your Partner's Name</label>
+                                        <input type="text" id="name2" name="name2" class="form-control" placeholder="Your Partner's Name" />
                                     </div>
                                 </div>
 
