--- a/photos.html
+++ b/photos.html
@@ -159,6 +159,7 @@
                         <div class="row gallery">
                             <div class="wrapper-3-col animate-box">
                                 <!-- col 1 -->
+                                <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_059.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-1"><img src="/img/Portfolio_013.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-4"><img src="/img/Portfolio_010.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-8"><img src="/img/Portfolio_030.jpg" alt="" /></div>
@@ -170,6 +171,7 @@
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_008.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_058.jpg" alt="" /></div>
                                 <!-- col 2 -->
+                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_060.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_042.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-5"><img src="/img/Portfolio_009.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-9"><img src="/img/Portfolio_027.jpg" alt="" /></div>
@@ -181,6 +183,7 @@
                                 <div class="portfolio-img-container order-md-21"><img src="/img/Portfolio_016.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-20"><img src="/img/Portfolio_017.jpg" alt="" /></div>
                                 <!-- col 3 -->
+                                <div class="portfolio-img-container order-md-2"><img src="/img/Portfolio_061.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-3"><img src="/img/Event_Mel_Wedding_001.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-6"><img src="/img/Portfolio_011.jpg" alt="" /></div>
                                 <div class="portfolio-img-container order-md-10"><img src="/img/Portfolio_053.jpg" alt="" /></div>
