portfolio and contact form update

--- a/contact.html
+++ b/contact.html
@@ -228,7 +228,9 @@
                                             <option value="Family Session">Couple Session</option>
                                             <option value="Family Session">Family Session</option>
                                             <option value="Event or Celebration">Event</option>
-                                            <option value="other">Other</option>
+                                            <option value="Event or Celebration">Professional Headshots</option>
+                                            <option value="Event or Celebration">Business Inquiry</option>
+                                            <option value="other">Other (Please describe below)</option>
                                         </select>
                                         <p style="margin-bottom: 0px"><a href="offerings" target="_blank">Explore packages</a></p>
                                     </div>
@@ -236,29 +238,8 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="subject">3 words to describe the vibe</label>
-                                        <input type="text" id="vibe" name="vibe" class="form-control" placeholder="adventure, cozy, romantic, fairytale, rain, polaroid, etc." />
-                                    </div>
-                                </div>
-
-                                <div class="row form-group">
-                                    <div class="col-md-12">
-                                        <label for="message">How did you hear about me? *</label>
-                                        <select name="found_me" id="found_me" class="form-control" required="">
-                                            <option value="Select" selected="" disabled="">Select</option>
-                                            <option value="Website">Website</option>
-                                            <option value="Facebook">Facebook</option>
-                                            <option value="Ad">Ad</option>
-                                            <option value="Refferal">Referral</option>
-                                            <option value="other">Other</option>
-                                        </select>
-                                    </div>
-                                </div>
-
-                                <div class="row form-group">
-                                    <div class="col-md-12">
-                                        <label for="subject">If selected 'Referral' or 'Other' above, please specify who or what. Thanks!</label>
-                                        <input type="text" id="referral" name="referral" class="form-control" placeholder="Name of person who referred you to me or other source." />
+                                        <label for="subject">3 words to describe the vibe. (You can also link a Pinterest mood board!)</label>
+                                        <input type="text" id="vibe" name="vibe" class="form-control" placeholder="adventure, cozy, romantic, fairytale, summer rainstorm, polaroid, etc." />
                                     </div>
                                 </div>
 
@@ -271,7 +252,7 @@
 
                                 <div class="row form-group">
                                     <div class="col-md-12">
-                                        <label for="message">Add any extra details here — How can I help you?</label>
+                                        <label for="message">Describe your request — How can I help you?</label>
                                         <textarea
                                             type="message"
                                             id="message"
@@ -281,6 +262,28 @@
                                             class="form-control"
                                             placeholder="The more details the better. How can I serve you?"
                                         ></textarea>
+                                    </div>
+                                </div>
+
+                                <div class="row form-group">
+                                    <div class="col-md-12">
+                                        <label for="message">How did you hear about me? *</label>
+                                        <select name="found_me" id="found_me" class="form-control" required="">
+                                            <option value="Select" selected="" disabled="">Select</option>
+                                            <option value="Google">Google</option>
+                                            <option value="Facebook">Facebook</option>
+                                            <option value="Instagram">Instagram</option>
+                                            <option value="Ad">Ad</option>
+                                            <option value="Refferal">Referral (please specify)</option>
+                                            <option value="other">Other (please specify)</option>
+                                        </select>
+                                    </div>
+                                </div>
+
+                                <div class="row form-group">
+                                    <div class="col-md-12">
+                                        <label for="subject">If selected 'Referral' or 'Other' above, please specify who or what. Thanks!</label>
+                                        <input type="text" id="referral" name="referral" class="form-control" placeholder="Name of person who referred you to me or other source" />
                                     </div>
                                 </div>
 
