updated links and contact

--- a/alertBar.html
+++ b/alertBar.html
@@ -6,16 +6,16 @@
         <h4 class="sticky-footer-text display-none-sm">
             <ul class="social-icons">
                 <li>
-                    <a href="https://www.instagram.com/forrestherman/" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/forrestherman.ca/" target="_blank"><i class="fab fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.facebook.com/forrestherman.photography" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/forrestherman.ca" target="_blank"><i class="fab fa-facebook-f"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.pinterest.ca/forresthermanphotography/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="https://www.pinterest.ca/forrestherman_photo/" target="_blank"><i class="fab fa-pinterest-p"></i></a>
                 </li>
                 <li>
-                    <a href="https://www.youtube.com/channel/UCtqtGIeIzLx5YykDAU3_CrQ" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="https://www.youtube.com/channel/UCiCwYNjYVr0BH-XRuKIDn9Q" target="_blank"><i class="fab fa-youtube"></i></a>
                 </li>
             </ul>
         </h4>
