--- a/contact.html
+++ b/contact.html
@@ -156,7 +156,12 @@
                                     </li>
                                     <li class="email">
                                         <p>
-                                            <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
+                                            <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Inquiry"> forrestherman.ca@gmail.com </a>
+                                        </p>
+                                    </li>
+                                    <li class="insta">
+                                        <p>
+                                            <a href="https://www.instagram.com/forrestherman.ca/" target="_blank"> @forrestherman.ca </a>
                                         </p>
                                     </li>
                                 </ul>
@@ -293,6 +298,10 @@
                                         <textarea type="message" id="questions" cols="30" rows="10" class="form-control" placeholder="Questions here, don't be shy!"></textarea>
                                     </div>
                                 </div> -->
+
+                                <div class="form-group">
+                                    <p>Thank you for reaching out! I will get back to you within 24 hours.</p>
+                                </div>
 
                                 <div class="form-group">
                                     <input type="submit" value="Send Message" class="btn btn-form" />
