--- a/footer.html
+++ b/footer.html
@@ -56,7 +56,7 @@
                     Forrest Herman
                     <!-- <a href="https://github.com/forrest-herman" target="_blank">Forrest Herman</a> -->
                     <br />
-                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Wedding Inquiry"> forrestherman.ca@gmail.com </a>
+                    <a href="mailto:forrestherman.ca@gmail.com?subject=Forrest Herman — Inquiry"> forrestherman.ca@gmail.com </a>
                     <br />
                     <a href="tel:7052032534"> (705) 203-2534</a>
                 </p>
